# husk

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml
husk/: __init__.py
husk/data/: docker-compose.yml  nginx.conf
husk/extract/: common.py  docker.py  podman.py
test/extract/: test_docker_extract.py  test_podman_extract.py
test/extract/data/: Dockerfile
